--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "waku-template",
+  "name": "rsc-todos-parcel",
   "version": "0.0.0",
   "type": "module",
   "private": true,
+  "server": "dist/server.js",
+  "source": "src/server.tsx",
+  "targets": {
+    "server": {
+      "context": "react-server",
+      "outputFormat": "esmodule"
+    }
+  },
   "scripts": {
     "cf:typegen": "wrangler types && bun run format",
-    "dev": "waku dev",
-    "build": "waku build --with-cloudflare",
+    "dev": "concurrently \"bun watch\" \"bun start\"",
+    "clean": "rm -rf dist/{client,server*}",
+    "watch": "parcel watch",
+    "start": "wrangler dev",
+    "build": "bun clean && parcel build && bun ./postbuild.ts",
     "predeploy": "bun run build",
     "deploy": "wrangler deploy",
     "format": "biome format --write .",
     "check": "biome ci ."
   },
+  "devDependencies": {
+    "@tailwindcss/postcss": "4.1.8",
+    "@types/bun": "latest",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.6",
+    "concurrently": "9.1.2",
+    "parcel": "2.15.2",
+    "postcss": "8.5.4",
+    "tailwindcss": "4.1.8",
+    "typescript": "5.8.3"
+  },
   "dependencies": {
-    "hono": "4.7.8",
-    "react": "experimental",
-    "react-dom": "experimental",
-    "react-server-dom-webpack": "experimental",
-    "waku": "0.23.2",
-    "wrangler": "4.18.0"
+    "@parcel/rsc": "2.15.2",
+    "hono": "4.7.11",
+    "lucide-react": "0.514.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "wrangler": "4.19.1"
   },
   "imports": {
     "#/*": "./src/*",
     "#/utils/*": "./src/utils/*"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@mdx-js/mdx": "3.1.0",
-    "@mdx-js/rollup": "3.1.0",
-    "@shikijs/rehype": "3.2.2",
-    "@tailwindcss/typography": "0.5.16",
-    "@tailwindcss/vite": "4.1.5",
-    "@types/node": "22.13.0",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "bun-types": "1.2.15",
-    "miniflare": "4.20250410.1",
-    "rehype-mdx-code-props": "3.0.1",
-    "remark-flexible-markers": "1.2.1",
-    "remark-frontmatter": "5.0.0",
-    "remark-gfm": "4.0.1",
-    "remark-mdx-frontmatter": "5.0.0",
-    "tailwindcss": "4.1.5",
-    "typescript": "5.8.3"
   }
 }
