--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,12 +1,34 @@
 {
-  "name": "waku-template",
+  "name": "rsc-todos-parcel",
+  "$schema": "./node_modules/wrangler/config-schema.json",
   "compatibility_date": "2025-04-16",
+  // Enable Node.js compatibility so that AsyncLocalStorage works.
   "compatibility_flags": ["nodejs_compat"],
-  "main": "./dist/worker/serve-cloudflare.js",
+  "main": "dist/server.js",
+  // Parcel will do the bundling. We don't need wrangler's default bundling.
+  "no_bundle": true,
+  // Serve the dist dir as static assets.
+  // Ideally this would be dist/client only, but Cloudflare doesn't have
+  // an option to mount the assets at a sub-path.
+  // Instead, make sure you have .assetsignore file inside dist to ensure that
+  // the server code isn't publicly accessible.
   "assets": {
-    "directory": "./dist/assets",
-    "binding": "ASSETS",
-    "html_handling": "drop-trailing-slash",
-    "not_found_handling": "404-page"
-  }
+    "directory": "./dist",
+    "binding": "ASSETS"
+  },
+  // Include all JS modules in the dist dir in the worker, not just the main entrypoint.
+  "base_dir": "dist",
+  "rules": [
+    {
+      "type": "ESModule",
+      "globs": ["**/*.js"]
+    }
+  ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "rsc-todos-parcel",
+      "database_id": "6d7a8afe-cc11-4c5e-9499-935dfdeb7c16"
+    }
+  ]
 }
